crates/ascii-agents/tests/snapshots/layout_golden__cubicle_band_96x72.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 38
expression: l.cubicle_band
---
Bounds {
    x: 27,
    y: 21,
    width: 69,
    height: 43,
}
