crates/ascii-agents/tests/snapshots/layout_golden__desks_dense_seed2.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 100
expression: l.home_desks
---
[
    Point {
        x: 57,
        y: 67,
    },
    Point {
        x: 81,
        y: 67,
    },
    Point {
        x: 57,
        y: 85,
    },
    Point {
        x: 81,
        y: 85,
    },
]
