crates/ascii-agents/tests/snapshots/layout_golden__desks_open_plan_seed1.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 74
expression: l.home_desks
---
[
    Point {
        x: 43,
        y: 53,
    },
    Point {
        x: 67,
        y: 53,
    },
    Point {
        x: 43,
        y: 71,
    },
    Point {
        x: 67,
        y: 71,
    },
]
