crates/ascii-agents/tests/snapshots/layout_golden__meeting_192x160.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 60
expression: l.meeting_room
---
Some(
    Bounds {
        x: 0,
        y: 48,
        width: 53,
        height: 56,
    },
)
