crates/ascii-agents/tests/snapshots/layout_golden__meeting_96x72.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 26
expression: l.meeting_room
---
Some(
    Bounds {
        x: 0,
        y: 21,
        width: 26,
        height: 25,
    },
)
