crates/ascii-agents/tests/snapshots/layout_golden__meeting_dense_seed2.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 112
expression: l.meeting_room
---
Some(
    Bounds {
        x: 0,
        y: 48,
        width: 42,
        height: 56,
    },
)
