crates/ascii-agents/tests/snapshots/layout_golden__meeting_open_plan_seed1.snap
---
source: crates/ascii-agents/tests/layout_golden.rs
assertion_line: 86
expression: l.meeting_room
---
None
